[package]
name = "comby-search"
description = "Structural Code Search using Comby"
version = "0.1.0"
edition = "2021"
git = "https://github.com/huytd/comby-search"

[[bin]]
name = "cb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
