[package]
name = "comby-search"
description = "Structural Code Search using Comby"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/huytd/comby-search"
repository = "https://github.com/huytd/comby-search"
license = "BSD-3-Clause"
authors = ["Huy Tran <hey@huy.rocks>"]
keywords = ["code", "search", "comby", "code-search"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
